# barm

./: CMakeLists.txt  PROJECT_README.md
flattep_app/barm_control/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SYSTEM_ARCHITECTURE.md  pubspec.yaml
flattep_app/barm_control/android/app/: build.gradle.kts
flattep_app/barm_control/ios/Runner/: AppDelegate.swift  Info.plist
flattep_app/barm_control/ios/Runner.xcodeproj/: project.pbxproj
flattep_app/barm_control/lib/: main.dart
flattep_app/barm_control/lib/models/: arm_position.dart  ble_commands.dart  teaching_position.dart
flattep_app/barm_control/lib/screens/: joint_control_screen.dart  main_screen.dart  motion_control_screen.dart  position_manager_screen.dart  sequence_player_screen.dart  teaching_mode_screen.dart
flattep_app/barm_control/lib/services/: arm_ble_service.dart  volume_button_service.dart
flattep_app/barm_control/linux/: CMakeLists.txt
flattep_app/barm_control/linux/runner/: my_application.cc
flattep_app/barm_control/macos/Runner.xcodeproj/: project.pbxproj
flattep_app/barm_control/macos/Runner/Configs/: AppInfo.xcconfig
flattep_app/barm_control/test/: widget_test.dart
flattep_app/barm_control/web/: index.html  manifest.json
flattep_app/barm_control/windows/: CMakeLists.txt
flattep_app/barm_control/windows/runner/: Runner.rc  main.cpp
main/: CMakeLists.txt  ble_arm_control.c  ble_arm_control.h  main.c  position_storage.c  position_storage.h  sequence_player.c  sequence_player.h  sts_servo.c  sts_servo.h
(+3 files in other folders)
